# vroom-engine

./: .env.template  Cargo.toml  README.md  build-release.sh  docker-compose.yml
.sqlx/: query-03cf7654db65c15dd1f9a56c32e1e22be2a7de500a1e35ca24c2b0ec9b6ec984.json  query-5b086a1932903e2664bf1e114694149ec58d991085678b239d791a668695715b.json  query-63a7fe1c11e7e4bd5395bd92a96c483eb3e5059f1c3de6c5fe35b0a68106fcee.json  query-c83c22052e725453b1d5ab5e6c9c64b9c8b3435181da39d86230e56fba9b60e7.json
migrations/: 001_initial.sql  20250701134817_init.down.sql  20250701134817_init.up.sql  20250701174645_init_db.down.sql  20250701174645_init_db.up.sql  20250708100046_add_mobile_category.up.sql  20250710151011_add_business_specializations.down.sql  20250710151011_add_business_specializations.up.sql  20250710153023_remove_unused_business_columns.down.sql  20250710153023_remove_unused_business_columns.up.sql  20250710155843_specializations_nullable.up.sql  20250710162327_specializations_array_text.up.sql  20251112145420_add_review_fields.up.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/application/: mod.rs  state.rs
src/application/handlers/: business.rs  health.rs  mod.rs
src/config/: config.rs
src/database/: connection.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: business.rs  category.rs  mod.rs
src/domain/repositories/: business_repository.rs  mod.rs
src/domain/services/: business_service.rs  mod.rs
src/handlers/: business.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: business_repository_impl.rs  mod.rs  pool.rs
src/models/: business.rs  mod.rs
src/repositories/: business.rs  mod.rs
src/services/: mod.rs  overpass.rs
