[package]
name = "car-services-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# OSM data parsing
osmpbf = "0.2"
geo = "0.27"
geo-types = "0.7"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }

# Cmd 
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"