[package]
name = "vroomgine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "runtime-tokio-native-tls", "bigdecimal"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Env
dotenvy = "0.15.7"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# OSM data parsing
osmpbf = "0.3.8"
geo = "0.31.0"
geo-types = "0.7.17"

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "stream", "rustls-tls"] }
tokio-util = { version = "0.7.17", features = ["io"] }

# CLI
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
urlencoding = "2.1.3"
num-traits = "0.2.19"
bigdecimal = { version = "0.4.9", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
